--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,74 @@
+
+/* See http://stackoverflow.com/questions/16649943/css-to-set-a4-paper-size*/
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #FAFAFA;
+  font: 12pt "Tahoma";
+}
+* {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+.pagina {
+  width: 210mm;
+  min-height: 297mm;
+  padding: 20mm;
+  margin: 10mm auto;
+  border: 1px #D3D3D3 solid;
+  border-radius: 5px;
+  background: white;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+.pagina-areautil {
+  padding: 1cm 0 0 1cm;
+  border: 5px red solid;
+  height: 257mm;
+  outline: 2cm #FFEAEA solid;
+  position: relative;
+}
+
+@page {
+  size: A4;
+  margin: 0;
+}
+@media print {
+  html, body {
+    width: 210mm;
+    height: 297mm;        
+  }
+  .pagina {
+    margin: 0;
+    border: initial;
+    border-radius: initial;
+    width: initial;
+    min-height: initial;
+    box-shadow: initial;
+    background: initial;
+    page-break-after: always;
+  }
+}
+.capa-g1 {
+  
+}
+.capa-g2 {
+  margin-top: 6cm; /* TODO: otimizar */
+}
+.capa-g3 {
+  margin-top: 7cm; /* TODO: otimizar */
+}
+.capa-g4 {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+}
+
 /* Estilos exclusivos para pagina de capa */
 
 #capa {
-  margin: 3em;
+  /*margin: 3em;*/
   text-transform: uppercase;
   text-align: center;
 }
